--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Click & Book</title>
+    <link href="https://fonts.cdnfonts.com/css/boldhead" rel="stylesheet">
   </head>
   <body>
     <noscript>
